# gendiff

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  main.py  utils.py
gendiff/format/: __init__.py  stylish.py
gendiff/scripts/: entry.py  gendiff.py
tests/: test_main.py
tests/fixtures/: nested1.yml  yaml2.yml
