[tool.poetry]
name = "gendiff"
version = "0.1.0"
description = ""
authors = ["e.panin <fath34d@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.entry:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
